Move to Java 17 as BREE